test/types/records/split-init/split-init-globals-reorder-cond-error.good
split-init-globals-reorder-cond-error.chpl:13: error: Initialization order in conditional does not match
split-init-globals-reorder-cond-error.chpl:13: note: then initializes: b a
split-init-globals-reorder-cond-error.chpl:16: note: else initializes: a b
